Support up/down in the open quickly window

--- a/MacDown/Code/Open Quickly/MPOpenQuicklyWindowController.xib
+++ b/MacDown/Code/Open Quickly/MPOpenQuicklyWindowController.xib
@@ -177,6 +177,9 @@
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </searchFieldCell>
+                            <connections>
+                                <outlet property="delegate" destination="-2" id="ei6-tk-BR3"/>
+                            </connections>
                         </searchField>
                     </toolbarItem>
                 </allowedToolbarItems>
